--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /runs/
+/test.mov
+/.idea/vcs.xml
+/.idea/TTs_vehicle-counting-yolov5.iml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/modules.xml
+/.idea/misc.xml
